# stl2thumbnail

./: .clang-format  CMakeLists.txt  README.md  aabb.cpp  aabb.h  clang-format.sh  install.sh  main.cpp  picture.cpp  picture.h  triangle.h  vec3.h  vec4.h
backends/: backend.h
backends/opengl/: backend.cpp  backend.h  glad.c  glad.h
backends/raster/: backend.cpp  backend.h  zbuffer.cpp  zbuffer.h
generators/gnome/: CMakeLists.txt  main.cpp  stl.thumbnailer
generators/kde/: CMakeLists.txt  thumbcreator.cpp  thumbcreator.h
lib/: CMakeLists.txt  aabb.cpp  aabb.h  math.h  picture.cpp  picture.h  triangle.h  vec3.h  vec4.h
lib/backends/: backend.h
lib/backends/raster/: backend.cpp  backend.h  rasterbackend.cpp  rasterbackend.h  zbuffer.cpp  zbuffer.h
lib/stl/: helpers.h  parser.cpp  parser.h
libstl/: CMakeLists.txt  helpers.h  parser.cpp  parser.h
